vm-demo-1.11/resources/istio/sidecar-whitebox-vm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: whitebox-vm
  namespace: vm-services 
spec:
  workloadSelector:
    labels:
      app: python-http
  ingress:
    - port:
        number: 9090
        protocol: HTTP
        name: python-http
      captureMode: NONE
      bind: 0.0.0.0
      defaultEndpoint: 127.0.0.1:7001
  egress:
    - port: 
        number: 8888
        protocol: HTTP_PROXY
        name: httpbin-egress
      captureMode: NONE
      bind: 127.0.0.1
      hosts:
      - "istioinaction/httpbin.istioinaction.svc.cluster.local"
    - hosts:
      - "istio-system/*"
